--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,24 @@ dependencies:
   http: ^0.13.3
   json_annotation: ^4.0.1
   flutter_svg: ^0.22.0
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
+  equatable: ^2.0.0
+  uuid: ^3.0.0
+  formz: ^0.4.1
+  logger: ^1.1.0
+  authentication_repository:
+    path: packages/authentication_repository
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
   build_runner: ^2.1.1
   flutter_test:
     sdk: flutter
   json_serializable: ^4.1.4
+  bloc_test: ^8.3.0
+  mocktail: ^0.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
