--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_svg: ^0.22.0
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
+  flutter_modular: ^4.1.2
   equatable: ^2.0.0
   uuid: ^3.0.0
   formz: ^0.4.1
