--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   equatable: ^2.0.0
   uuid: ^3.0.0
   formz: ^0.4.1
+  flutter_modular: ^4.1.2
   logger: ^1.1.0
   authentication_repository:
     path: packages/authentication_repository
