--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   equatable: ^2.0.0
   uuid: ^3.0.0
   formz: ^0.4.1
-  flutter_modular: ^4.1.2
   logger: ^1.1.0
+  components:
+    path: packages/components
   authentication_repository:
     path: packages/authentication_repository
   user_repository:
