--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.0
   formz: ^0.4.1
   logger: ^1.1.0
+  animated_text_kit: ^4.2.1
   components:
     path: packages/components
   authentication_repository:
