--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,18 @@ dependencies:
   formz: ^0.4.1
   logger: ^1.1.0
   animated_text_kit: ^4.2.1
+  tools:
+    git:
+      url: git@github.com:samurai-o/app_tools.git
+      ref: main
   components:
     path: packages/components
   authentication_repository:
     path: packages/authentication_repository
   user_repository:
     path: packages/user_repository
+  samapi:
+    path: packages/samapi
 
 dev_dependencies:
   build_runner: ^2.1.1
